--- a/app/src/main/res/layout/activity_place_details.xml
+++ b/app/src/main/res/layout/activity_place_details.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +17,8 @@
             android:layout_width="@dimen/detailed_image_width"
             android:layout_height="@dimen/detailed_image_height"
             android:layout_gravity="center_horizontal"
-            tools:src="@drawable/legoland" />
+            tools:src="@drawable/legoland"
+            android:contentDescription="@string/legoland_name"/>
 
         <TextView
             android:id="@+id/detailed_name"
@@ -38,11 +38,6 @@
             android:id="@+id/detailed_desc"
             style="@style/DetailedTextStyle"
             tools:text="@string/legoland_description" />
-
-        <TextView
-            style="@style/DetailedTextStyle"
-            android:text="@string/legoland_description"
-            android:textStyle="bold" />
 
         </LinearLayout>
 
