Did some clean-up, adjustments and refactoring.

--- a/app/src/main/res/layout/sections.xml
+++ b/app/src/main/res/layout/sections.xml
@@ -12,8 +12,9 @@
     <ImageView
         android:id="@+id/list_item_image"
         style="@style/ImageStyle"
-        android:layout_width="@dimen/list_image_width"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
+        android:cropToPadding="false"
         android:src="@drawable/legoland" />
 
     <LinearLayout
@@ -33,6 +34,7 @@
             android:id="@+id/list_item_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#757575"
             tools:text="Item Address" />
 
     </LinearLayout>
