--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/place_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </ListView>
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/place_list"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:divider="#BDBDBD"
+    android:dividerHeight="1dp">
+</ListView>
