--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,8 +38,8 @@
     <style name="BigTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">@dimen/big_textSize</item>
+        <item name="android:textSize">@dimen/name_textSize</item>
+        <item name="android:textColor">#212121</item>
     </style>
 
     <style name="DetailedIconStyle">
@@ -53,6 +53,7 @@
     <style name="DetailedTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/address_textSize</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:layout_marginTop">@dimen/list_marginLeft</item>
